--- a/Androidcode/app/src/main/res/layout/activity_main.xml
+++ b/Androidcode/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,11 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.christopher.androidcode.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
+    <org.opencv.android.JavaCameraView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:visibility="gone"
+        android:id="@+id/show_camera"
+        opencv:show_fps="true"
+        opencv:camera_id="any"/>
 </RelativeLayout>
