--- a/Androidcode/app/src/main/res/layout/activity_main.xml
+++ b/Androidcode/app/src/main/res/layout/activity_main.xml
@@ -1,14 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.christopher.androidcode.MainActivity">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:opencv="http://schemas.android.com/apk/res-auto"
+    android:layout_height="match_parent">
 
     <org.opencv.android.JavaCameraView
         android:layout_width="fill_parent"
@@ -16,5 +10,6 @@
         android:visibility="gone"
         android:id="@+id/show_camera"
         opencv:show_fps="true"
-        opencv:camera_id="any"/>
-</RelativeLayout>
+        opencv:camera_id="any" />
+
+</LinearLayout>
